# OpenFloData

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.api  LICENSE  LICENSE-VOLVE-DATA.md  README.md  api_service.py  docker-compose.yml  pyproject.toml  stream_service.py
scripts/sql/: init-postgres-timebucket.sql
tests/: conftest.py
tests/integration/: conftest.py  test_api_integration.py
tests/unit/: test_api_endpoints.py  test_api_endpoints_extended.py  test_stream_service.py
